# azure-signalr-client-e2e

./: .gitignore  .gitmodules  README.md  build-artifacts.sh  dev.json  install-prerequisite.sh  run-all-tests.sh  run-from-artifacts.sh  stable.json
.github/workflows/: build-artifacts.yml  build.yml  dev.yml  stable.yml  sync-submodules.yml  test-dotnet-default.yml  test-dotnet-serverless.yml  test-e2e.yml  test-java.yml  test-swift-linux.yml  test-swift-macos.yml
cpp/: build_client_sdk_linux.sh
cpp/sample/: CMakeLists.txt  build-sample.sh  chat.cpp
java/: pom.xml
java/src/main/java/: Chat.java
java/src/test/java/: IntegrationTests.java
server/: Program.cs
server/Hubs/: TestHub.cs  TestHubJava.cs
signalrservice/java/: pom.xml
signalrservice/server/: IntegrationTestServer.csproj
signalrservice/server/Hubs/: TestHubSwift.cs
webpubsub/javascript/chatclient/: .gitignore  README.md  package.json  prepare-tests.sh  server.mjs  tsconfig.json
webpubsub/javascript/socketio/: .gitignore  README.md  package.json  prepare-tests.sh  tsconfig.json
